<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_60"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textAlignment="center"
            android:textSize="@dimen/sp_17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_no_internet_connection_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_13"
            android:textAlignment="center"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/txt_no_internet_connection_message" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/butCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_7"
            android:background="@drawable/but_cancel_error_dialog_background"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/txt_cancel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/butRetry"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/butRetry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/but_error_dialog_retry_background"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/txt_retry"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@id/butCancel"
            app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
