<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            app:cardCornerRadius="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_32"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/update_title"
                    android:textColor="@color/ebony_clay"
                    android:textSize="@dimen/sp_18" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/update_description"
                    android:textAlignment="center"
                    android:textColor="@color/raven"
                    android:textSize="@dimen/sp_14" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/agree_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:paddingStart="@dimen/dp_54"
                    android:paddingTop="@dimen/dp_11"
                    android:paddingEnd="@dimen/dp_54"
                    android:paddingBottom="@dimen/dp_11"
                    android:text="@string/agree"
                    android:textSize="@dimen/sp_14"
                    app:cornerRadius="@dimen/dp_16"
                    app:strokeColor="?attr/colorPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>
